# cerebro-app

./: .gitignore  README.md  demo_test.py  index.html  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  attempt.py  exercise.py  user.py
app/routers/: adaptive.py  exercises.py  users.py
app/schemas/: attempt.py  exercise.py  user.py
app/services/: adaptive_brain.py
tests/: conftest.py  test_adaptive_brain.py  test_api.py
